--- a/RouteProjectt.cbp
+++ b/RouteProjectt.cbp
@@ -35,22 +35,32 @@
 			<Add option="-fexceptions" />
 		</Compiler>
 		<Unit filename="include/Admin.h" />
+		<Unit filename="include/AdminManager.h" />
 		<Unit filename="include/Client.h" />
 		<Unit filename="include/Employee.h" />
+		<Unit filename="include/EmployeeManager.h" />
 		<Unit filename="include/FileHelper.h" />
+		<Unit filename="include/FillData.h" />
 		<Unit filename="include/Parser.h" />
 		<Unit filename="include/Person.h" />
+		<Unit filename="include/Screens.h" />
 		<Unit filename="include/Validation.h" />
+		<Unit filename="include/clientManager.h" />
 		<Unit filename="include/dataSourceInterface.h" />
 		<Unit filename="include/fileManager.h" />
 		<Unit filename="main.cpp" />
 		<Unit filename="src/Admin.cpp" />
+		<Unit filename="src/AdminManager.cpp" />
 		<Unit filename="src/Client.cpp" />
 		<Unit filename="src/Employee.cpp" />
+		<Unit filename="src/EmployeeManager.cpp" />
 		<Unit filename="src/FileHelper.cpp" />
+		<Unit filename="src/FillData.cpp" />
 		<Unit filename="src/Parser.cpp" />
 		<Unit filename="src/Person.cpp" />
+		<Unit filename="src/Screens.cpp" />
 		<Unit filename="src/Validation.cpp" />
+		<Unit filename="src/clientManager.cpp" />
 		<Unit filename="src/dataSourceInterface.cpp" />
 		<Unit filename="src/fileHelper.cpp" />
 		<Unit filename="src/fileManager.cpp" />
